--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-IOC_GROUP=lnls-sirius
-IOC_REPO=sinap-timing-epics-ioc
+BASE_VERSION=base-3.15
 COMMIT=master
 DEBIAN_VERSION=debian-9.13
+IOC_GROUP=lnls-sirius
+IOC_REPO=sinap-timing-epics-ioc
+SYNAPPS_VERSION=synapps-lnls-R1-1-2
