--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 BASE_VERSION=base-3.15
-COMMIT=master
+COMMIT=v3.5.2-rc1
 DEBIAN_VERSION=debian-9.13
 IOC_GROUP=lnls-sirius
 IOC_REPO=sinap-timing-epics-ioc
